# microservice_rust

./: Cargo.toml  README.md
microservice/: ADVANCED_MICROSERVICE_IMPLEMENTATION_PLAN.md  ADVANCED_MICROSERVICE_PROGRESS_REPORT.md  ADVANCED_PROJECT_CONTINUATION_REPORT.md  BUG_FIX_REPORT.md  COMPLETE_MICROSERVICE_MASTERY_REPORT.md  Cargo.toml  DOCUMENT_CONTENT_ANALYSIS.md  DOCUMENT_STRUCTURE_REPORT.md  ENHANCED_MICROSERVICE_PROGRESS_REPORT.md  FINAL_ADVANCED_MICROSERVICE_REPORT.md  FINAL_IMPROVEMENT_COMPLETION_REPORT.md  FINAL_PROJECT_CONTINUATION_COMPLETE_REPORT.md  FINAL_PROJECT_SUMMARY.md  FINAL_RUST_190_SUMMARY.md  FINAL_ULTIMATE_MICROSERVICE_REPORT.md  IMPROVEMENT_REPORT.md  LINK_CHECK_REPORT.md  MULTI_TASK_PROGRESS_REPORT.md  RUST_190_ADVANCEMENT_REPORT.md  RUST_190_MICROSERVICE_COMPLETION_REPORT.md  ULTIMATE_DOCUMENT_ENHANCEMENT_COMPLETION_REPORT.md  ULTIMATE_MICROSERVICE_ADVANCEMENT_REPORT.md  ULTIMATE_MICROSERVICE_MASTERY_COMPLETE_REPORT.md  ULTIMATE_RUST_190_MICROSERVICE_COMPLETION_REPORT.md  microservice.cdx.json
microservice/benches/: axum_benchmark.rs  comprehensive_benchmark.rs  grpc_benchmark.rs  messaging_benchmark.rs  performance_benchmarks.rs  production_benchmark_suite.rs
microservice/docker/: README.md  docker-compose.messaging.yml  docker-compose.observability.yml
microservice/docs/: 00_目录.md  ADVANCED_MULTI_TASK_PROGRESS_REPORT.md  ARCHITECTURE_IMPROVEMENT_SUMMARY.md  COMPREHENSIVE_ARCHITECTURE_ANALYSIS_REPORT.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  COMPREHENSIVE_MICROSERVICE_GUIDE.md  COMPREHENSIVE_MULTI_TASK_PROGRESS_REPORT.md  DEEP_MULTI_TASK_PROGRESS_REPORT.md  DOCUMENT_ORGANIZATION_SUMMARY.md  DOCUMENT_STRUCTURE_ANALYSIS.md  FINAL_ARCHITECTURE_SUMMARY.md  FORMAL_VERIFICATION_ARCHITECTURE.md  GLOSSARY.md  LOCAL_LOGGING_IMPLEMENTATION_SUMMARY.md  MULTI_TASK_EXECUTION_REPORT.md  OPENTELEMETRY_OBSERVABILITY_GUIDE.md  README.md  STYLE_GUIDE.md  SUPER_MULTI_TASK_PROGRESS_REPORT.md  TOPIC_MAPPING_AND_GAP_ANALYSIS.md  ULTIMATE_DOCUMENT_ENHANCEMENT_PROGRESS_REPORT.md  ULTIMATE_DOCUMENT_ENHANCEMENT_REPORT.md  ULTIMATE_MULTI_TASK_PROGRESS_REPORT.md  实用扩展推进完成报告.md
microservice/docs/01_微服务基础理论/: 1.1_微服务架构概述.md  1.2_Rust在微服务中的优势.md  1.3_微服务设计原则.md  1.4_微服务挑战与解决方案.md  1.5_学术研究集成_SEI_MIT_Stanford理论.md  1.6_微服务架构理论体系_形式化定义与架构论证.md
microservice/docs/02_Rust_1.90_新特性/: 2.1_Rust_1.90_语言特性.md  2.2_异步编程增强.md  2.3_性能优化特性.md  2.4_内存安全改进.md
microservice/docs/03_核心微服务框架/: 03.x_原生_async_trait_迁移策略与边界.md  3.1_Axum_现代Web框架.md  3.2_Actix_Web_高性能框架.md  3.3_Tonic_gRPC框架.md  3.4_Volo_字节跳动RPC框架.md
microservice/docs/04_服务发现与注册/: 4.1_Consul_服务发现.md  4.2_Nacos_服务治理.md  4.3_etcd_分布式存储.md  4.4_自定义服务发现.md
microservice/docs/05_API网关与路由/: 5.1_Ocelot_轻量级网关.md  5.2_Kong_企业级网关.md  5.3_Traefik_云原生网关.md  5.4_自定义路由策略.md
microservice/docs/06_数据存储与ORM/: 6.1_SQLx_异步SQL工具包.md  6.2_Diesel_类型安全ORM.md  6.3_SeaORM_现代异步ORM.md  6.4_Redis_缓存与消息队列.md
microservice/docs/07_消息队列与事件驱动/: 7.1_RabbitMQ_消息代理.md  7.2_Apache_Kafka_流处理.md  7.3_NATS_轻量级消息系统.md  7.4_事件驱动架构模式.md  7.5_NATS_Kafka_组合范式_与_Rust_1.90_实践.md
microservice/docs/08_可观测性与监控/: 8.1_OpenTelemetry_可观测性.md  8.2_Prometheus_指标监控.md  8.3_Jaeger_分布式追踪.md  8.4_Grafana_可视化仪表板.md  8.5_OTel_语义约定_覆盖清单.md
microservice/docs/09_安全与认证/: 9.1_JWT_身份认证.md  9.2_OAuth2_授权框架.md  9.3_TLS_SSL_加密通信.md  9.4_微服务安全最佳实践.md  9.5_供应链安全_SLSA_SBOM_实践.md  9.6_供应链安全_与_CICD集成流水线.md
microservice/docs/10_配置管理与部署/: 10.1_配置管理策略.md  10.2_Docker_容器化.md  10.3_Kubernetes_编排.md  10.4_CI_CD_持续集成部署.md  10.5_生产环境部署手册.md
microservice/docs/11_性能优化与测试/: 11.1_性能基准测试.md  11.2_内存优化策略.md  11.3_并发处理优化.md  11.4_负载测试与压力测试.md  11.5_形式化验证_TLA+_入门.md  11.x_2024_idiom_与_async_接口规范_checklist.md
microservice/docs/12_最佳实践与案例研究/: 12.1_微服务架构设计模式.md  12.2_错误处理与容错机制.md  12.3_数据一致性策略.md  12.4_实际项目案例分析.md  12.5_数据一致性落地合辑_Outbox_Saga_对照.md  12.6_工业界案例分析_Netflix_Uber_Amazon深度剖析.md
microservice/docs/13_2025年最新技术趋势/: 13.10_依赖管理与版本升级策略.md  13.2_边缘计算与微服务.md  13.3_AI_ML_集成微服务.md  13.4_云原生技术栈.md  13.5_Rust_1.90_异步trait稳定化.md  (+4 more)
microservice/examples/: advanced_ai_ml_demo.rs  advanced_architecture_demo.rs  advanced_comprehensive_demo.rs  advanced_graphql_demo.rs  advanced_grpc_demo.rs  advanced_patterns_demo.rs  advanced_rust_190_features_demo.rs  advanced_security_demo.rs  ai_ml_demo.rs  auto_scaling_demo.rs  axum_rest_api.rs  chaos_engineering_demo.rs  cloud_native_demo.rs  comprehensive_microservice_demo.rs  comprehensive_middleware_demo.rs  comprehensive_observability_demo.rs  discovery_demo.rs  distributed_tracing_demo.rs  graphql_demo.rs  grpc_client_demo.rs  grpc_service.rs  integrated_logging_demo.rs  local_logging_demo.rs  messaging_advanced_demo.rs  messaging_demo.rs  middleware_demo.rs  modern_frameworks_demo.rs  multi_cloud_demo.rs  opentelemetry_demo.rs  orm_demo.rs  performance_demo.rs  performance_optimization_demo.rs  poem_demo.rs  rust_190_comprehensive_demo.rs  rust_190_enhanced_demo.rs  rust_190_features_demo.rs  salvo_demo.rs  security_demo.rs  service_mesh_advanced_demo.rs  service_mesh_demo.rs  (+8 more)
microservice/formal/: CircuitBreakerVerification.tla  Makefile  MessageQueueVerification.tla  SagaVerification.tla  circuit-breaker-config.json  message-queue-config.json  saga-config.json
microservice/k8s/: README.md  deploy-grpc-service.yaml  gateway.yaml  httproute.yaml  ingress-traefik.yaml  otel-collector.yaml  traefik-tcp-route.yaml
microservice/scripts/: comprehensive_improvement.sh  fixstyle.ps1  linkcheck.ps1  linkcheck.sh  quick_demo.ps1  quick_demo.sh  stylecheck.ps1  verify_docs.ps1  verify_docs.sh  verify_rust_190_features.ps1  verify_rust_190_features.sh
microservice/src/: advanced_microservice_architecture.rs  advanced_patterns.rs  ai_ml_advanced.rs  auto_scaling.rs  chaos_engineering.rs  config.rs  error.rs  fusen.rs  graphql_advanced.rs  lib.rs  lib_simple.rs  messaging.rs  middleware.rs  modern_frameworks.rs  multi_cloud.rs  performance_advanced.rs  performance_optimization.rs  poem.rs  rust_190_advanced.rs  rust_190_enhanced.rs  rust_190_features.rs  rust_190_optimized.rs  salvo.rs  security_advanced.rs  simple_microservice.rs  spring_rs.rs  utils.rs  volo_advanced.rs
(+110 files in other folders)
